--- a/src/app/adddata/adddata.component.html
+++ b/src/app/adddata/adddata.component.html
@@ -11,12 +11,17 @@
                                 <th scope="col">Auth</th>
                                 <th scope="col">HTTPS</th>
                                 <th scope="col">Cors</th>
-                                <th scope="col">Link</th>
+                                <th scope="col">Category</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let i of ">
-                                <td>{{</td>
+                            <tr *ngFor="let i of add.entries">
+                                <td>{{i.API}}</td>
+                                <td>{{i.Description}}</td>
+                                <td>{{i.Auth}}</td>
+                                <td>{{i.HTTPS}}</td>
+                                <td>{{i.Cors}}</td>
+                                <td>{{i.Category}}</td>
                             </tr>
                         </tbody>
 
